--- a/pages/fight/index.wxml
+++ b/pages/fight/index.wxml
@@ -54,7 +54,7 @@
                                 class="{{(isShowRightAnswer?item.className:item.meActive?'active':'')+' answer b-sizing al-center justBet'}}" 
                                 bindtap="submitAnswer" data-id="{{index}}"
                             >
-                                <view class="text">{{item.value}}</view>
+                                <view class="text">{{indexSwichText[index + '']}}、 {{item.value}}</view>
                                 <view wx:if="{{isShowRightAnswer&&(item.meActive||item.isRight)}}" class="status">
                                     <text wx:if="{{item.isRight}}" class="iconfont icon-zhengque"></text>
                                     <text wx:else class="iconfont icon-cuohao"></text>
