--- a/pages/week_result/index.wxml
+++ b/pages/week_result/index.wxml
@@ -24,6 +24,6 @@
         <button type="primary" class="result-btn b-sizing" bindtap="back">返回</button>
     </view>
     <view class="rule">
-        规则：执法学徒、执法新兵，失败-0积分，获胜+1积分，平局不加不扣；执法骨干、执法先锋、执法专家，失败-1积分，获胜+1积分，平局不加不扣；
+        <!-- 规则：执法学徒、执法新兵，失败-0积分，获胜+1积分，平局不加不扣；执法骨干、执法先锋、执法专家，失败-1积分，获胜+1积分，平局不加不扣； -->
     </view>
 </view>
