--- a/pages/fight/index.wxml
+++ b/pages/fight/index.wxml
@@ -50,10 +50,9 @@
                             <view class="me player">
                                 <image wx:if="{{item.meActive}}" src="{{meInfo.avatarUrl||'../../assets/images/test/user.png'}}" alt="{{item.key}}"></image>
                             </view>
-                            <view
-                                class="{{(isShowRightAnswer?item.className:item.meActive?'active':'')+' answer b-sizing al-center justBet'}}" 
-                                bindtap="submitAnswer" data-id="{{index}}"
-                            >
+<view class="{{'answer b-sizing al-center justBet '+(isShowRightAnswer?(item.isRight?((item.meActive||item.rivalActive)?'right':''):'error'): item.meActive?'active':''  )}}" 
+    bindtap="submitAnswer" data-id="{{index}}"
+>
                                 <view class="text">{{indexSwichText[index + '']}}、 {{item.value}}</view>
                                 <view wx:if="{{isShowRightAnswer&&(item.meActive||item.isRight)}}" class="status">
                                     <text wx:if="{{item.isRight}}" class="iconfont icon-zhengque"></text>
@@ -68,7 +67,7 @@
                 </view>
             </view>
             <view class="topic-footer">
-                <button hidden="{{currentQuestion.questionType!='3'||isSubDouble}}" type="primary" class="sub" bindtap="doubleSub">提交</button>
+                <button hidden="{{currentQuestion.questionType!='3'||isSubDouble||isShowRightAnswer}}" type="primary" class="sub" bindtap="doubleSub">提交</button>
             </view>
         </view>
     </view>
