--- a/pages/fight/index.less
+++ b/pages/fight/index.less
@@ -217,6 +217,7 @@
             }
             .topic-footer {
                 height: 200rpx;
+                padding: 20rpx 0;
                 .sub {
                     background-color: #46d7b6;
                 }
