--- a/pages/week/index.less
+++ b/pages/week/index.less
@@ -165,7 +165,7 @@
             }
             .topic-footer {
                 height: 140rpx;
-                padding: 0 12rpx;
+                padding: 20rpx 12rpx 30rpx;
                 .switch-btn{
                     border-radius: 80rpx;
                     height: 88rpx;
