--- a/pages/week/index.wxss
+++ b/pages/week/index.wxss
@@ -65,25 +65,6 @@
   color: #3b393c;
   font-size: 32rpx;
 }
-.week-box .week .both .me-box .me .info .rank {
-  width: 170rpx;
-  height: 50rpx;
-  margin-top:20rpx;
-  position: relative;
-}
-.week-box .week .both .me-box .me .info .rank image {
-  width: 100%;
-  height: 100%;
-}
-.week-box .week .both .me-box .me .info .rank text {
-  color: #fff;
-  font-size: 24rpx;
-  left: 60rpx;
-  top: 8rpx;
-  width: 100%;
-  position: absolute;
-}
-
 .week-box .week .both .me-box .me .header {
   padding: 0 20rpx 0 30rpx;
 }
@@ -116,13 +97,6 @@
   background: #ffffff;
   width: 100%;
   border-radius: 20rpx 20rpx 0 0;
-}
-.week-box .week .topic-box .fixButton {
-  background: #46d7b6;
-}
-.week-box .week .topic-box .fixButton::before {
-  content: '';
-  width: 0;
 }
 .week-box .week .topic-box .type {
   padding: 0 40rpx 20rpx;
@@ -188,8 +162,8 @@
   color: #ffffff;
 }
 .week-box .week .topic-box .topic-footer {
-  height: 200rpx;
-  padding: 0 12rpx;
+  height: 140rpx;
+  padding: 20rpx 12rpx 30rpx;
 }
 .week-box .week .topic-box .topic-footer .switch-btn {
   border-radius: 80rpx;
