--- a/pages/week/index.less
+++ b/pages/week/index.less
@@ -61,7 +61,19 @@
                             font-size: 32rpx;
                         }
                         .rank {
-                            
+                            image{
+                                width: 180rpx;
+                                height: 50rpx;
+                            }
+                            .level {
+                                height: 33rpx;
+                                font-size: 24rpx;
+                                color: #fff;
+                                padding-right: 15rpx;
+                                position: absolute;
+                                left: 63rpx;
+                                top: 8rpx;
+                            }
                         }
                     }
                     .header {
@@ -161,6 +173,9 @@
                     &.active {
                         color: #ffffff;
                     }
+                }
+                .sureAnswer {
+                    background: #43d9be;
                 }
             }
             .topic-footer {
