--- a/pages/knowledgeBase_3/knowledgeBase_3.wxml
+++ b/pages/knowledgeBase_3/knowledgeBase_3.wxml
@@ -1,19 +1,9 @@
 <!--pages/knowledgeBase_3/knowledgeBase_3.wxml-->
 <view class="page_box">
-  <view class="file_name">
-    《中华人民共和国行政强制法》
-  </view>
-  <view class="rules_text">
-    <view class="paragraph">《中华人民共和国行政强制法》字字能使肌肤文件发布合肥部分很方便你都无法激发华为发布会娟额外翻倍翻倍忽然爆发分噩耗不符合人份让部分很方便而非环保局儿</view>
-    <view>第一章 总则</view>
-    <view>第一条 为了市纪委免费大脑神经符合减肥那地方见面大会上愤怒饥饿和愤怒的会娟你发呢还让绝代风华你记得吗那段时间和大煞风景我发你的改变而价格和你的房间粉丝都很丰富内涵我发的那个活动价格和南非会娟和峰峰你就和人家发呢南非警方还和人家哪位书法家俄方 v 饭都没和家人</view>
-    <view>第一章 总则</view>
-    <view>第一条 为了市纪委免费大脑神经符合减肥那地方见面大会上愤怒饥饿和愤怒的会娟你发呢还让绝代风华你记得吗那段时间和大煞风景我发你的改变而价格和你的房间粉丝都很丰富内涵我发的那个活动价格和南非会娟和峰峰你就和人家发呢南非警方还和人家哪位书法家俄方 v 饭都没和家人</view>
-    <view>第一章 总则</view>
-    <view>第一条 为了市纪委免费大脑神经符合减肥那地方见面大会上愤怒饥饿和愤怒的会娟你发呢还让绝代风华你记得吗那段时间和大煞风景我发你的改变而价格和你的房间粉丝都很丰富内涵我发的那个活动价格和南非会娟和峰峰你就和人家发呢南非警方还和人家哪位书法家俄方 v 饭都没和家人</view>
-    <view>第一章 总则</view>
-    <view>第一条 为了市纪委免费大脑神经符合减肥那地方见面大会上愤怒饥饿和愤怒的会娟你发呢还让绝代风华你记得吗那段时间和大煞风景我发你的改变而价格和你的房间粉丝都很丰富内涵我发的那个活动价格和南非会娟和峰峰你就和人家发呢南非警方还和人家哪位书法家俄方 v 饭都没和家人</view>
-    <view>第一章 总则</view>
-    <view>第一条 为了市纪委免费大脑神经符合减肥那地方见面大会上愤怒饥饿和愤怒的会娟你发呢还让绝代风华你记得吗那段时间和大煞风景我发你的改变而价格和你的房间粉丝都很丰富内涵我发的那个活动价格和南非会娟和峰峰你就和人家发呢南非警方还和人家哪位书法家俄方 v 饭都没和家人</view>
-  </view>
+    <view class="file_name">
+        《{{rule.name}}》
+    </view>
+    <view class="rules_text">
+        {{rule.detail}}
+    </view>
 </view>
