--- a/pages/knowledgeBase/knowledgeBase.wxss
+++ b/pages/knowledgeBase/knowledgeBase.wxss
@@ -19,27 +19,28 @@ page {
   height: 75rpx;
   margin-top: 20rpx;
 }
-.entry_list {
-  width: 638rpx;
-  height: 162rpx;
-  border-radius: 36rpx;
-  margin: 0 auto 60rpx;
-  text-align: center;
-  font-size: 38rpx;
-  color: #fff;
-  opacity: .8;
-  line-height: 162rpx;
+.rule-list .rule-item {
+    width: 638rpx;
+    height: 162rpx;
+    border-radius: 36rpx;
+    margin: 0 auto 60rpx;
+    text-align: center;
+    font-size: 38rpx;
+    color: #fff;
+    opacity: .8;
+    line-height: 162rpx;
 }
-.entry_list.first {
+
+.rule-list .rule-item:nth-of-type(1) {
   background: #7ad8fe;
   margin-top: 44rpx;
 }
-.entry_list.second {
+.rule-list .rule-item:nth-of-type(2) {
   background: linear-gradient(to top right, #9999f9, 50%, #6c88d2)
 }
-.entry_list.third {
+.rule-list .rule-item:nth-of-type(3) {
   background: #fdcc7f;
 }
-.entry_list.fourth {
+.rule-list .rule-item:nth-of-type(4) {
   background: #92ccd7;
 }
