--- a/pages/knowledgeBase_2/knowledgeBase_2.wxss
+++ b/pages/knowledgeBase_2/knowledgeBase_2.wxss
@@ -17,13 +17,13 @@ page {
 }
 .file_name {
   width: 100%;
-  height: 88rpx;
   background: #fefefe;
   margin-top: 20rpx;
   border-radius: 20rpx;
+  padding: 22rpx 10rpx;
   box-shadow: 0px 4px 12px -6px rgba(0, 0, 0, 0.3);
   text-align: center;
-  line-height: 88rpx;
+  line-height: 64rpx;
   font-size: 36rpx;
   color: #46d7b6;
 }
