--- a/pages/record/record.wxss
+++ b/pages/record/record.wxss
@@ -2,6 +2,13 @@ page {
   width: 100%;
   height: 100%;
 }
+.nodata{
+  text-align: center;
+  font-weight: 350;
+  color: #605e5f;
+  line-height: 100rpx;
+  font-size: 24rpx;
+}
 .bj-page{
   width: 100%;
   height: 100%;
