小程序码替更换

--- a/pages/shareImg/shareImg.wxml
+++ b/pages/shareImg/shareImg.wxml
@@ -24,7 +24,7 @@
     </view>
   </view>
   <!-- <image class="bj__left" src="/assets/images/share/bg.png"></image>
-  <image class="code" src="/assets/images/share/code.png"></image>
+  <image class="code" src="/assets/images/share/qrcode.jpg"></image>
   <image class="avatar" src="/assets/images/test/logo.jpg"></image>
   <view class="text1">张三</view>
   <view class="text2">执法专家5级</view>
