--- a/pages/knowledgeBase_2/knowledgeBase_2.wxml
+++ b/pages/knowledgeBase_2/knowledgeBase_2.wxml
@@ -13,7 +13,7 @@
     <!-- <view class="title">法规</view> -->
     <view 
         wx:for="{{list}}" 
-        class="file_name"
+        class="file_name overeli"
         data-index="{{index}}"
         bindtap="readRule"
         wx:key="index"
