--- a/pages/adminIndex/adminIndex.wxss
+++ b/pages/adminIndex/adminIndex.wxss
@@ -9,18 +9,22 @@ page {
 }
 .title {
   width: 100%;
-  height: 145rpx;
   background: #46d7b6;
   border-radius: 0 0 30rpx 30rpx;
   text-align: center;
-  font-size: 70rpx;
-  color: #fff;
+  padding-bottom: 60rpx;
+}
+.title image {
+    display: block;
+    margin: 0 auto;
+    width: 160rpx;
+    height: 68rpx;
 }
 .province-item {
   position: relative;
-  width: 617rpx;
-  height: 168rpx;
-  margin: 40rpx auto 0;
+  width: 616rpx;
+  height: 164rpx;
+  margin: 60rpx auto 0;
   border-radius: 25rpx;
   text-align: center;
   line-height: 168rpx;
