--- a/pages/knowledgeBase_3/knowledgeBase_3.wxss
+++ b/pages/knowledgeBase_3/knowledgeBase_3.wxss
@@ -8,14 +8,14 @@ page {
   height: 100%;
 }
 .file_name {
-  width: 652rpx;
-  height: 88rpx;
+  width: 612rpx;
+  padding: 20rpx;
   background: #fefefe;
   margin: 35rpx auto 30rpx;
   border-radius: 20rpx;
-  box-shadow: 0px 4px 12px -6px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px 18px -6px rgba(0, 0, 0, 0.3);
   text-align: center;
-  line-height: 88rpx;
+  line-height: 52rpx;
   font-size: 36rpx;
   color: #46d7b6;
 }
