--- a/pages/loginType/loginType.wxml
+++ b/pages/loginType/loginType.wxml
@@ -1,8 +1,11 @@
 <view class='bj-page'>
   <image src='/assets/images/bg1.jpg'></image>
   <view class='bj-loginType'>
-    <view class='bj-loginType__title'>2020年生态环境</view>
-    <view class='bj-loginType__title'>保护执法大练兵知识竞赛</view>
+    <!-- <view class='bj-loginType__title'>2020年生态环境</view>
+    <view class='bj-loginType__title'>保护执法大练兵知识竞赛</view> -->
+    <view class="loginType_title">
+        <image src="../../assets/images/title.png" />
+    </view>
     <button 
       class='bj-loginType__lawEn'
       open-type="getUserInfo"
