--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -8,7 +8,7 @@
           <text class="iconfont icon-zan"></text>
           <text>{{userInfo.likeCount}}</text>
         </view> 
-        <image data-type="honor" bindtap="go" class="honor-logo" src='/assets/images/honor/honor-logo.png'></image>
+        <image wx:if="{{userInfo.awardsNum>0&&userInfo.roleType==2}}" data-type="honor" bindtap="go" class="honor-logo" src='/assets/images/honor/honor-logo.png'></image>
      </view>
      <view class="userinfo_right">
         <view class="userName">{{userInfo.name}}</view>
