--- a/pages/wrongQuestion/wrongQuestion.wxml
+++ b/pages/wrongQuestion/wrongQuestion.wxml
@@ -9,9 +9,9 @@
         <view class="name">
           {{userInfo.name}}
         </view>
-        <view class="level">
+        <view class="level" wx:if="{{userInfo.roleType === '2'}}">
           <image src='/assets/images/grading.png'></image>
-          <!-- <view class="level__content">{{userInfo.userLevel}}</view> -->
+          <view class="level__content">{{userInfo.userLevel}}</view>
         </view>
       </view>
     </view>
