--- a/pages/adminIndex/adminIndex.wxss
+++ b/pages/adminIndex/adminIndex.wxss
@@ -67,7 +67,6 @@ page {
 }
 .bottom-fun {
   width: 100%;
-  height: 35rpx;
   position: absolute;
   left: 0;
   bottom: 3%;
@@ -75,6 +74,7 @@ page {
   box-sizing: border-box;
   display: flex;
   flex-wrap: nowrap;
+  align-items: center;
   justify-content: space-between;
 }
 .bottom-fun_result {
@@ -82,9 +82,7 @@ page {
   background: transparent;
   margin: 0!important;
   font-size: 28rpx;
-  line-height: 28rpx;
   font-weight: 400;
-  padding: 0;
   color: #46d7b6;
   line-height: 35rpx;
 }
