--- a/pages/shareImg/shareImg.wxml
+++ b/pages/shareImg/shareImg.wxml
@@ -7,7 +7,9 @@
         <image class="avatar" src="{{userInfo.headUrl}}"></image>
         <view class="des">
           <view class="des__item">{{userInfo.name}}</view>
-          <!-- <view class="des__item">{{userInfo.userLevel}}</view> -->
+          <view class="des__item"
+            wx:if="{{userInfo.roleType === 2}}"
+          >{{userInfo.userLevel}}</view>
           <view class="des__item">{{userInfo.winCount}}胜{{userInfo.loseCount}}负｜{{userInfo.score}}分</view>
         </view>
       </view>
