--- a/pages/wrongQuestion/wrongQuestion.wxss
+++ b/pages/wrongQuestion/wrongQuestion.wxss
@@ -2,6 +2,12 @@ page {
   width: 100%;
   height: 100%;
 }
+.nodata{
+  line-height: 80rpx;
+  text-align: center;
+  color: #605e5f;
+  font-size: 24rpx;
+}
 .bj-page{
   width: 100%;
   height: 100%;
