--- a/pages/fight_result/index.wxml
+++ b/pages/fight_result/index.wxml
@@ -5,7 +5,7 @@
             <view class="header">
                 <image src="{{fightResult.homeHead}}"></image>
                 <view 
-                    wx:if="{{fightResult.homeScore>fightResult.awayScore}}"
+                    wx:if="{{!!(fightResult.homeScore>fightResult.awayScore)}}"
                     class="crown pa animated fadeInDown ac"
                 >
                     <image src="../../assets/images/fight_result/crown.png"></image>
@@ -22,7 +22,7 @@
             <view class="header">
                 <image src="{{fightResult.awayHead}}"></image>
                 <view 
-                    wx:if="{{fightResult.homeScore<fightResult.awayScore}}" 
+                    wx:if="{{!!(fightResult.homeScore<fightResult.awayScore)}}" 
                     class="crown pa animated fadeInDown"
                 >
                     <image src="../../assets/images/fight_result/crown.png"></image>
@@ -41,6 +41,6 @@
         <button hidden="{{!plate}}" open-type="share" class="result-btn b-sizing">分享荣耀</button>
     </view>
     <view class="rule">
-        规则：执法学徒、执法新兵，失败-0积分，获胜+1积分，平局不加不扣；执法骨干、执法先锋、执法专家，失败-1积分，获胜+1积分，平局不加不扣；
+        规则：执法学徒、执法新兵，失败-0积分，获胜+1积分，平局不加不扣；执法骨干、执法先锋、执法专家，失败-1积分，获胜+1积分，平局不加不扣。
     </view>
 </view>
