--- a/pages/honor/index.wxss
+++ b/pages/honor/index.wxss
@@ -5,6 +5,13 @@
   display: flex;
   flex-direction: column;
 }
+.nodata{
+  text-align: center;
+  font-weight: 350;
+  color: #605e5f;
+  line-height: 100rpx;
+  font-size: 24rpx;
+}
 .honor .header {
   width: 100%;
   padding: 18rpx 0 50rpx;
