--- a/pages/week/index.wxml
+++ b/pages/week/index.wxml
@@ -7,7 +7,7 @@
                     <view class="header">
                         <image src="{{meInfo.avatarUrl}}"></image>
                     </view>
-                    <view class="info pr5 al-center">
+                    <view class="info pr5">
                         <view class="name overeli fw900">{{meInfo.name}}</view>
                         <view class="rank pr" wx:if="{{meInfo.roleType === '2'}}">
                             <image src="/assets/images/grading.png" alt="" srcset=""></image>
