--- a/pages/fight/index.wxss
+++ b/pages/fight/index.wxss
@@ -34,6 +34,7 @@
   color: #3b393c;
   line-height: 130rpx;
   flex: 1;
+  width: 0;
   font-size: 36rpx;
 }
 .fight-box .matching .both .me-box .me .header image,
@@ -182,6 +183,7 @@
 .fight-box .fight .topic-box .topic {
   color: #525053;
   flex: 1;
+  height: 0;
   width: 100%;
   padding: 0 20rpx;
   overflow-y: auto;
