--- a/pages/wrongQuestion/wrongQuestion.wxss
+++ b/pages/wrongQuestion/wrongQuestion.wxss
@@ -42,11 +42,16 @@ page {
   height: 100%;
   border-radius: 100%;
 }
+.ranking__person__des {
+  flex: 1;
+  width: 0;
+}
 .ranking__person__des .name {
   font-size: 30rpx;
   color: #605e5f;
   font-weight: 400;
   line-height: 2;
+  width: 100%;
 }
 .ranking__person__des .level{
   display: flex;
